<resources>
    <string name="app_name">Movie Review App</string>
    <string name="all_movies">All Movies</string>
    <string name="rated_movies">Rated Movies</string>
    <string name="_167">167</string>
    <string name="rate_the_movie">RATE THE MOVIE</string>

    <string name="title">TITLE</string>

    <string name="description">DESCRIPTION</string>
    <string name="todo">To DO</string>

</resources>
